--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,283 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Montserrat:wght@300&family=Mukta:wght@700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+  cursor: pointer;
+  object-fit: cover;
+}
+
+body {
+  background-color: #fff;
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+}
+
+.wrapper {
+  width: 1280px;
+  margin: 50px auto;
+}
+
+header {
+  position: relative;
+}
+
+header .logo {
+  font-weight: 600;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+header ul.nav {
+  float: right;
+  list-style: none;
+}
+
+header ul.nav li {
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+  transition: opacity 500ms ease;
+}
+
+header ul.nav li:hover {
+  opacity: 0.5;
+}
+
+header .shop-cart {
+  float: right;
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+}
+header .shop-cart:hover,
+header .shop-cart.active {
+  color: #dc3d3d;
+  transform: scale(1.3);
+}
+
+header .shop-cart-wrapper {
+  position: absolute;
+  top: 30px;
+  right: 0%;
+  width: 450px;
+  background: #fafafa;
+  z-index: 111;
+  box-shadow: 2px 0px 11px 5px rgba(230, 230, 230, 0.85);
+  -webkit-box-shadow: 2px 0px 11px 5px rgba(230, 230, 230, 0.85);
+  -moz-box-shadow: 2px 0px 11px 5px rgba(230, 230, 230, 0.85);
+  padding: 20px;
+  padding-bottom: 0;
+}
+
+header .shop-cart-wrapper .item {
+  width: 100%;
+  float: left;
+  margin-bottom: 20px;
+}
+
+header .shop-cart-wrapper .empty h2 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+header .shop-cart-wrapper .item img {
+  width: 70px;
+  float: left;
+  margin-right: 20px;
+}
+
+header .shop-cart-wrapper .item h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+header .shop-cart-wrapper .item p {
+  color: #797979;
+  font-weight: 600;
+}
+
+header .shop-cart-wrapper .item .delete-button {
+  color: #ca5252;
+  float: right;
+  position: relative;
+  top: -25px;
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+}
+
+header .shop-cart-wrapper .item .delete-button:hover {
+  color: #c62525;
+  transform: scale(1.3);
+}
+
+.summa {
+  float: left;
+  width: 100%;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+header .presentation {
+  margin: 50px o;
+  margin-top: 20px;
+  background: url("./assets/header-bg.jpg") no-repeat;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
+  background-color: #bcbcbc;
+  position: relative;
+}
+
+header .presentation::after {
+  content: "Лучшие товары для вашего дома";
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  width: 300px;
+  font-size: 40px;
+  font-weight: 600;
+  color: white;
+}
+header .presentation::before {
+  content: "по низким ценам";
+  position: absolute;
+  top: 250px;
+  left: 50px;
+  width: 300px;
+  font-size: 15px;
+  font-weight: 300;
+  color: white;
+}
+
+.categories {
+  margin: 20px auto;
+}
+
+.categories div {
+  display: inline-block;
+  background: #f2f2f2;
+  border-radius: 50px;
+  padding: 10px 20px;
+  margin-bottom: 25px;
+  margin-right: 15px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: all 500ms ease;
+}
+
+.categories div:hover {
+  border-color: silver;
+  transform: scale(1.1);
+}
+
+.fullitem {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(34, 34, 34, 0.675);
+  z-index: 1000;
+  overflow: auto;
+}
+
+.fullitem > div {
+  width: 550px;
+  position: relative;
+  margin: 10% auto;
+  padding: 40px 30px;
+  background: #f2f2f2;
+  border-radius: 9px;
+}
+
+.fullitem .closeitem {
+  float: right;
+  font-size: 24px;
+  margin: 10px 0;
+  margin-top: -10px;
+  z-index: 10000;
+  color: #ca5252;
+  transition: color, transform 500ms ease;
+  cursor: pointer;
+}
+.fullitem .closeitem:hover {
+  transform: scale(1.3);
+  color: #c10d0d;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+main .item {
+  width: 30%;
+  margin-bottom: 50px;
+  background-color: #f5f5f5;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+main .item img,
+.fullitem img {
+  width: 100%;
+  height: 70%;
+  border-radius: 10px 10px 0 0;
+  transition: transform 500ms ease;
+}
+
+main .item img:hover,
+.fullitem img:hover {
+  transform: scale(1.05);
+}
+
+main h2,
+.fullitem h2,
+main p,
+.fullitem p,
+main b,
+.fullitem b {
+  margin: 10px 20px;
+  color: #333;
+}
+
+main b,
+.fullitem b {
+  color: #5fa36a;
+}
+
+main .add-cart,
+.fullitem .add-cart {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  background: #ca5252;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  font-weight: 600;
+  transition: transform 500ms ease;
+}
+main .add-cart:hover,
+.fullitem .add-cart:hover {
+  transform: scale(1.3) translateY(-5px);
+}
+
+footer {
+  text-align: center;
+  margin-top: 100px;
 }
